ecs.tf
resource "aws_ecs_cluster" "my-cluster" {
  name = "my-cluster"
}

data "template_file" "testapp" {
  template = file("./templates/image.json")

  vars = {
    app_image      = var.app_image
    app_port       = var.app_port
    fargate_cpu    = var.fargate_cpu
    fargate_memory = var.fargate_memory
    aws_region     = var.aws_region
  }
}

resource "aws_ecs_task_definition" "test-def" {
  family                   = "testapp-task"
  execution_role_arn       = aws_iam_role.ecs_task_execution_role.arn
  network_mode             = "awsvpc"
  requires_compatibilities = ["FARGATE"]
  cpu                      = var.fargate_cpu
  memory                   = var.fargate_memory
  container_definitions    = data.template_file.testapp.template
}
data "aws_ecs_container_definition" "ecs-test" {
  task_definition =  aws_ecs_task_definition.test-def.arn
  container_name  = "test-app"
}
 
resource "aws_ecs_service" "main" {
  name            = "service" 
  task_definition = aws_ecs_task_definition.test-def.arn
  desired_count   = var.app_count
  deployment_minimum_healthy_percent = 50
  cluster = aws_ecs_cluster.my-cluster.id
  launch_type     = "FARGATE"

  network_configuration {
    security_groups  = [aws_security_group.ecs_tasks.id]
    subnets          = aws_subnet.private.*.id
    assign_public_ip = true
  }

  load_balancer {
    target_group_arn = aws_alb_target_group.app-tg.arn
    container_name   = "test-app"
    container_port   = 80
  }


  depends_on = [aws_alb_listener.listen-lol,  aws_iam_role_policy_attachment.ecs_task_execution_role]
}
